--- a/css/updates.css
+++ b/css/updates.css
@@ -2,6 +2,27 @@
  *   Addtional Updates or Changes
  * =================================================================== */
 
- .background-ps{
-     background-image: url("/images/files/Background1.jpeg");
- }
+.background-ps {
+  background-image: url("/images/files/Background1.jpeg");
+}
+.img-planosSaude {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.img-planosSaude img {
+  height: 200px;
+  width: 200px;
+  padding: 50px;
+}
+
+.img-planosSaude1 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.img-planosSaude1 img {
+  height: 200px;
+  width: 300px;
+  padding: 50px;
+}
